cloud-infra-macros/tests/fails/string_with_only_alpha_numerics_and_underscores_empty.rs
use cloud_infra_macros::string_with_only_alpha_numerics_and_underscores;

fn example() {
    let key = string_with_only_alpha_numerics_and_underscores!("");
}

fn main() {}