cloud-infra-macros/tests/fails/string_with_only_alpha_numerics_and_underscores_empty.stderr
error: value should not be blank
 --> tests/fails/string_with_only_alpha_numerics_and_underscores_empty.rs:4:64
  |
4 |     let key = string_with_only_alpha_numerics_and_underscores!("");
  |                                                                ^^
